# dojo-cli

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/dojo_cli/: __init__.py  __main__.py  challenge.py  cli.py  client.py  config.py  constants.py  editor.py  http.py  install.py  log.py  remote.py  sensai.py  sftp.py  shell.py  socketio_niquests.py  terminal.py  tree.py  tui.py  user.py  utils.py  video.py  zed.py
