[project]
name = "dojo-cli"
version = "0.1.0"
description = "A command line interface wrapper for the pwn.college API"
readme = "README.md"
authors = [
    { name = "hidehiroanto", email = "hidehiro.anto@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cairosvg>=2.9.0",
    "cyclopts>=4.11.2",
    "itsdangerous>=2.2.0",
    "mfusepy>=3.1.1",
    "mpv>=1.0.8",
    "niquests[ws]>=3.18.7",
    "paramiko>=4.0.0",
    "python-socketio[client]>=5.16.1",
    "pyyaml>=6.0.3",
    "textual-image>=0.12.0",
    "trogon>=0.6.0",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
dojo = "dojo_cli:app"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"
